adding gui and updating readme