@@ -3,9 +3,17 @@ Converting images to dice art in Java.
 I got the idea from a video similar to this one : https://youtu.be/35Xgx6IfG5I 
 
 # usage
-Run `java -classpath out/production/dice-art/ Main {input_file} {output_file} {width} {height}`
+* Compile source files
+* Run class Main using: 
+  `java --module-path {path_to_javafx_sdk}/lib --add-modules javafx.controls,javafx.fxml -classpath {path_to_program_directory}/out/production/dice-art gui.Main`
+  
+* Choose number of dice used in width and height
+* Load image
+* Press **Make Art !**
 
 # screenshots
+![](images/obama.jpg)
+![](images/obamaArt.png)
 ![](images/monkey.jpg)
 ![](images/monkeyArtNew.png)
 ![](images/scart.jpg)
